Fix tooltip visibility

--- a/src/UI/Fields/AmountSelect/components/AmountInput/amountInput.module.scss
+++ b/src/UI/Fields/AmountSelect/components/AmountInput/amountInput.module.scss
@@ -44,7 +44,7 @@
     font-size: 1rem !important;
     line-height: 1;
     max-width: 90%;
-    overflow: auto;
+    // overflow: auto;
     padding-left: 1rem;
     position: absolute;
     top: 1.875rem;
